# reactive-mutiny

./: Cargo.toml  DEVELOPMENT.md  PLANNING.md  README.md
benches/: channels.rs  rc_wrappers.rs
benchmarks/: README.md
benchmarks/Dell-Latitude-5430/: c3f833a9fb6d2d3eaae9a2e193868ca562145639-rustc-1.80.0-linux-6.10.2-zen1-2-zen.txt  machine.info
benchmarks/HP-Pavilion-15z/: c3f833a9fb6d2d3eaae9a2e193868ca562145639-rustc-1.80.0-linux-6.10.2-zen1-2-zen.txt
benchmarks/T14-Thinkpad/: c3f833a9fb6d2d3eaae9a2e193868ca562145639-rustc-1.80.0-linux-6.10.2-zen1-2-zen.txt
benchmarks/analap/: 1678728815.b48170c02073c5891e72ff0e9e8dc43df5766df3.tests  1678730791.1de14458805807a330b569240345e58b5e79ac92.benchmarks  1678730791.1de14458805807a330b569240345e58b5e79ac92.tests  1678732548.0d0638f136f514b6af8cf5ee7f288992d07c065f.benchmarks  1678732548.0d0638f136f514b6af8cf5ee7f288992d07c065f.tests  1678734301.e40f6d482e9ffaf44a4e5ae0fd0e9ac47bf41fe6.benchmarks  1678734301.e40f6d482e9ffaf44a4e5ae0fd0e9ac47bf41fe6.tests  1678736039.19e8091a9bcf07bc9023182a787055c1af0b86fa.tests  1678740998.ed60ba68dd64b73b4fcb69ba40e3c5391f131fd8.benchmarks  1678746045.e2fd32765cfd58aa33a5bfc749d027609cae7eab.tests  1678751132.53633e7901b9a8082bb56740b400432ea3f0151c.benchmarks  1678756226.aa30519e16fbee5a7dc0a539d556eca8fd1cf0c7.performance  1678756226.aa30519e16fbee5a7dc0a539d556eca8fd1cf0c7.tests  1678761562.171c6119446ede5c6e392b9386addd77dc639a15.benchmarks  1678761562.171c6119446ede5c6e392b9386addd77dc639a15.performance  1678761562.171c6119446ede5c6e392b9386addd77dc639a15.tests  1678763598.03c5bbdb1b98b3f916feece70c7e79944ec23c3f.benchmarks  1679013433.ad0ade41e66e1e9647c868ccca2635359325c2c2.benchmarks  1679013433.ad0ade41e66e1e9647c868ccca2635359325c2c2.performance  1679014201.3ead36f88e28cdafd70abbfa57be3f20fd987124.performance  1679014201.3ead36f88e28cdafd70abbfa57be3f20fd987124.tests  1679014907.0378e7b2ea4f3f895f32ea03c1352a8d2edcbb31.performance  1679015475.0e2c3b85306f8e490f905cec64440911d3a60be5.tests  1679015482.5f40fe058c6d65c45121b157735eba25e3d7bff0.benchmarks  1679015482.5f40fe058c6d65c45121b157735eba25e3d7bff0.tests
benchmarks/domlap/: 1678104912.b48170c02073c5891e72ff0e9e8dc43df5766df3.benchmarks  1678104912.b48170c02073c5891e72ff0e9e8dc43df5766df3.tests  1678106504.1de14458805807a330b569240345e58b5e79ac92.benchmarks  1678108079.0d0638f136f514b6af8cf5ee7f288992d07c065f.benchmarks  1678108079.0d0638f136f514b6af8cf5ee7f288992d07c065f.performance  1678109641.e40f6d482e9ffaf44a4e5ae0fd0e9ac47bf41fe6.performance  1678109641.e40f6d482e9ffaf44a4e5ae0fd0e9ac47bf41fe6.tests  1678111077.19e8091a9bcf07bc9023182a787055c1af0b86fa.benchmarks  1678111077.19e8091a9bcf07bc9023182a787055c1af0b86fa.performance  1678115782.ed60ba68dd64b73b4fcb69ba40e3c5391f131fd8.performance  1678115782.ed60ba68dd64b73b4fcb69ba40e3c5391f131fd8.tests  1678120459.e2fd32765cfd58aa33a5bfc749d027609cae7eab.performance  1678120459.e2fd32765cfd58aa33a5bfc749d027609cae7eab.tests  1678125264.53633e7901b9a8082bb56740b400432ea3f0151c.benchmarks  1678125264.53633e7901b9a8082bb56740b400432ea3f0151c.tests  1678130154.aa30519e16fbee5a7dc0a539d556eca8fd1cf0c7.performance  1678719909.171c6119446ede5c6e392b9386addd77dc639a15.benchmarks  1678719909.171c6119446ede5c6e392b9386addd77dc639a15.performance  1678721382.03c5bbdb1b98b3f916feece70c7e79944ec23c3f.benchmarks  1678721382.03c5bbdb1b98b3f916feece70c7e79944ec23c3f.performance  1678721382.03c5bbdb1b98b3f916feece70c7e79944ec23c3f.tests  1679018600.ad0ade41e66e1e9647c868ccca2635359325c2c2.tests  1679019227.3ead36f88e28cdafd70abbfa57be3f20fd987124.benchmarks  1679019227.3ead36f88e28cdafd70abbfa57be3f20fd987124.performance  1679019227.3ead36f88e28cdafd70abbfa57be3f20fd987124.tests  1679019784.0378e7b2ea4f3f895f32ea03c1352a8d2edcbb31.performance  1679019784.0378e7b2ea4f3f895f32ea03c1352a8d2edcbb31.tests  1679101906.55e629f8766a39f0d1b0c3a23045f56b55565f64.tests  HEAD.1678280753..tests  git.hashes
benchmarks/ogre/: 1678104893.b48170c02073c5891e72ff0e9e8dc43df5766df3.performance  1678108671.0d0638f136f514b6af8cf5ee7f288992d07c065f.tests  1678110566.e40f6d482e9ffaf44a4e5ae0fd0e9ac47bf41fe6.performance  1678117625.ed60ba68dd64b73b4fcb69ba40e3c5391f131fd8.performance  1678122794.e2fd32765cfd58aa33a5bfc749d027609cae7eab.performance  1678133161.aa30519e16fbee5a7dc0a539d556eca8fd1cf0c7.benchmarks  1678133161.aa30519e16fbee5a7dc0a539d556eca8fd1cf0c7.tests  1678719688.171c6119446ede5c6e392b9386addd77dc639a15.benchmarks  1678719688.171c6119446ede5c6e392b9386addd77dc639a15.performance  1678719688.171c6119446ede5c6e392b9386addd77dc639a15.tests  (+9 more)
benchmarks/old/: README
src/: incremental_averages.rs  instruments.rs  lib.rs  mutiny_stream.rs  stream_executor.rs  streams_manager.rs  types.rs
tests/: api.rs  use_cases.rs
(+380 files in other folders)
